force-app/main/default/objects/Case_Comment__c/Case_Comment__c.object-meta.xml
<CustomObject>
    <label>Case Comment (Chat)</label>
    <nameField>
        <displayFormat>CC-{00000}</displayFormat>
        <label>Case Comment Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Case Comment (Chats)</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>