force-app/main/default/objects/Case_Comment__c/fields/Share_with_Facilitor__c.field-meta.xml
<CustomField>
    <fullName>Share_with_Facilitor__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Share with Facilitator</label>
    <type>Checkbox</type>
</CustomField>