force-app/main/default/objects/Case_Comment__c/fields/Shared_With__c.field-meta.xml
<CustomField>
    <fullName>Shared_With__c</fullName>
    <formula>IF (AND(Share_with_Facilitor__c = true, Share_with_Arbitrator__c = true), 
&apos;Facilitator &amp; Arbitrator&apos;, 
IF (AND(Share_with_Facilitor__c = true, Share_with_Arbitrator__c = false), 
&apos;Facilitator&apos;, 
IF (AND(Share_with_Facilitor__c = false, Share_with_Arbitrator__c = true), 
&apos;Arbitrator&apos;, 
&apos;&apos;)))</formula>
    <label>Shared With</label>
    <type>Text</type>
</CustomField>